--- a/source/index.html
+++ b/source/index.html
@@ -20,9 +20,9 @@
               <a href="blank.html">
                 Главная
               </a>
-              <button class="site-list__toogle" type="button">
+              <!-- <button class="site-list__toogle" type="button">
                 <span class="visually-hidden">закрыть меню</span>
-              </button>
+              </button> -->
             </div>
             <div class="site-list__item">
               <a href="catalog.html">
@@ -190,5 +190,22 @@
 
       </div>
     </footer>
+
+    <script>
+      var navMain = document.querySelector('.main-nav');
+      var navToggle = document.querySelector('.main-nav__toggle');
+
+      navMain.classList.remove('main-nav--nojs');
+
+      navToggle.addEventListener('click', function() {
+        if (navMain.classList.contains('main-nav--closed')) {
+          navMain.classList.remove('main-nav--closed');
+          navMain.classList.add('main-nav--opened');
+        } else {
+          navMain.classList.add('main-nav--closed');
+          navMain.classList.remove('main-nav--opened');
+        }
+      });
+    </script>
   </body>
 </html>
