--- a/source/index.html
+++ b/source/index.html
@@ -3,13 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="img/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/180.png">
+    <link rel="manifest" href="manifest.webmanifest">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   </head>
   <body class="page__body main-nav--opened">
-    <header class="page-header ">
+    <div class="page__wrapper">
+    <header class="page-header">
       <a class="page-header__logo" href="index.html">
-        <img src="img/logotype-mobile.svg" width="102" height="84" alt="логотип Седона">
+        <picture>
+          <source media="(min-width: 1200px)" srcset="img/logotype-desktop.svg">
+          <img src="img/logotype-mobile.svg" width="102" height="84" alt="логотип Седона">
+        </picture>
       </a>
       <button class="main-nav__toogle" type="button">
         <span class="visually-hidden">открыть меню</span>
@@ -20,9 +28,6 @@
               <a href="blank.html">
                 Главная
               </a>
-              <!-- <button class="site-list__toogle" type="button">
-                <span class="visually-hidden">закрыть меню</span>
-              </button> -->
             </div>
             <div class="site-list__item">
               <a href="catalog.html">
@@ -50,7 +55,6 @@
           <div class="intro-text">
             <img src="img/intro-text.svg" width="282px" height="214px" alt="интро седона">
           </div>
-          <!-- <img src="img/intro-triangle.svg" width="1200px" height="57px" alt="интро седона"> -->
         </div>
 
       </section>
@@ -65,80 +69,90 @@
       </section>
 
       <section class="reasons reasons-img">
-        <!-- <div> -->
-          <div class="reasons-item">
-              <div class="reasons-item__wrapper">
-                <div class="reasons-item__title">Настоящий городок</div>
-                <span class="reasons-item__desc">— №1 —</span>
-                <div class="reasons-item__desc">Седона не аттракцион для туристов, там течет своя жизнь</div>
-              </div>
-              <div class="reasons-item__img">
-                <img src="img/photo-city.jpg" width="800px" height="256px" alt="фото города">
-              </div>
+          <div class="reasons-item__wrapper">
+            <div class="reasons-item__title">Настоящий городок</div>
+            <div class="reasons-item__desc">— №1 —</div>
+            <div class="reasons-item__desc">Седона не аттракцион для туристов, там течет своя жизнь</div>
           </div>
-        <!-- </div> -->
+
+          <div class="reasons-item__img">
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/index-city-desktop.jpg 1x, img/index-city-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/index-city-tablet.jpg 1x, img/index-city-tablet@2x.jpg 2x">
+              <img class="reasons-item__img" src="img/index-city-mobile.jpg" srcset="img/index-city-mobile@2x.jpg 2x" alt="фото города" width="800px" height="256px" >
+            </picture>
+          </div>
       </section>
 
       <section class="features">
-           <div>
-              <div class="features-list">
-                <div class="features-item">
-                  <div class="features-item__img"></div>
-                  <div class="features-item__title">Жилье</div>
-                  <div class="features-item__desc">Рекомендуем пожить в настоящем мотеле, все как в кино!</div>
-                </div>
-                <div class="features-item">
-                  <div class="features-item__img"></div>
-                  <div class="features-item__title">Сувениры</div>
-                  <div class="features-item__desc">Не только китайского, но и местного производства!</div>
-                </div>
-                <div class="features-item">
-                  <div class="features-item__img"></div>
-                  <div class="features-item__title">Еда</div>
-                  <div class="features-item__desc">Всегда заказывайте фирменный бургер, Вы не разочаруетесь!</div>
-                </div>
-              </div>
-            </div>
-      </section>
-
-      <section class="reasons reasons-img">
-            <div class="reasons-item">
-              <div class="reasons-item__img">
-                <img src="img/photo-bridge.jpg" alt="фото моста" width="800px" height="256px" >
-              </div>
-              <div class="reasons-item__wrapper">
-                <div class="reasons-item__title">Там есть мост дьявола</div>
-                <span class="reasons-item__desc">— №2 —</span>
-                <div class="reasons-item__desc">Да, по нему можно пройти! Если вы осмелитесь, конечно</div>
-              </div>
-            </div>
-      </section>
-
-      <section class="reasons reasons_list">
-           <div class="reasons-item">
-              <div class="reasons-item__title">Небольшая площадь</div>
-              <span class="reasons-item__desc">— №3 —</span>
-              <div class="reasons-item__desc">Все интересные места находятся очень близко</div>
-            </div>
-            <div class="reasons-item">
-              <div class="reasons-item__title">Красивая дорога</div>
-              <span class="reasons-item__desc">— №4 —</span>
-              <div class="reasons-item__desc">Ехать в Седону из лас-вегаса совсем не скучно!</div>
-
-            </div>
-            <div class="reasons-item">
-              <div class="reasons-item__title">Мало туристов</div>
-              <span class="reasons-item__desc">— №5 —</span>
-              <div class="reasons-item__desc">Большинство едет в гранд каньон и толпится там</div>
-            </div>
-
+        <div class="features-item">
+          <div class="features-item__img">
+            <img src="img/icon-house.svg" alt="картинка жилья" width="40px" height="40px">
+          </div>
+          <div class="features-item__title">Жилье</div>
+          <div class="features-item__desc">Рекомендуем пожить в настоящем мотеле, все как в кино!</div>
         </div>
+
+        <div class="features-item">
+          <div class="features-item__img">
+            <img src="img/icon-gift.svg" alt="картинка подарка" width="35px" height="40px" >
+          </div>
+          <div class="features-item__title">Сувениры</div>
+          <div class="features-item__desc">Не только китайского, но и местного производства!</div>
+        </div>
+
+        <div class="features-item">
+          <div class="features-item__img">
+            <img src="img/icon-burger.svg" alt="картинка бургера" width="40px" height="40px" >
+          </div>
+          <div class="features-item__title">Еда</div>
+          <div class="features-item__desc">Всегда заказывайте фирменный бургер, Вы не разочаруетесь!</div>
+        </div>
+
+      </section>
+
+      <section class="reasons reasons-img reasons--reverse">
+        <div class="reasons-item__img">
+          <picture>
+            <source media="(min-width: 1200px)" srcset="img/index-bridge-desktop.jpg 1x, img/index-bridge-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="img/index-bridge-tablet.jpg 1x, img/index-bridge-tablet@2x.jpg 2x">
+            <img class="reasons-item__img" src="img/index-bridge-mobile.jpg" srcset="img/index-bridge-mobile@2x.jpg 2x" alt="фото моста" width="800px" height="256px" >
+          </picture>
+        </div>
+
+        <div class="reasons-item__wrapper">
+          <div class="reasons-item__title">Там есть мост дьявола</div>
+          <div class="reasons-item__desc">— №2 —</div>
+          <div class="reasons-item__desc">Да, по нему можно пройти! Если вы осмелитесь, конечно</div>
+        </div>
+
+      </section>
+
+      <section class="reasons">
+        <div class="reasons-item__wrapper">
+          <div class="reasons-item__title">Небольшая площадь</div>
+          <div class="reasons-item__desc">— №3 —</div>
+          <div class="reasons-item__desc">Все интересные места находятся очень близко</div>
+        </div>
+
+        <div class="reasons-item__wrapper">
+          <div class="reasons-item__title">Красивая дорога</div>
+          <div class="reasons-item__desc">— №4 —</div>
+          <div class="reasons-item__desc">Ехать в Седону из лас-вегаса совсем не скучно!</div>
+        </div>
+
+        <div class="reasons-item__wrapper">
+          <div class="reasons-item__title">Мало туристов</div>
+          <div class="reasons-item__desc">— №5 —</div>
+          <div class="reasons-item__desc">Большинство едет в гранд каньон и толпится там</div>
+        </div>
+
       </section>
 
       <section class="offer">
-        <div class="offer-title">Заинтересовались?</div>
-        <div class="offer-text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</div>
-        <a class="offer__find button"  href="blank.html" >Найти гостиницу</a>
+        <div class="offer__title">Заинтересовались?</div>
+        <div class="offer__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</div>
+        <a class="offer__button button"  href="blank.html" >Найти гостиницу</a>
       </section>
 
       <section class="map">
@@ -148,48 +162,50 @@
     </main>
 
     <footer class="page-footer">
-      <div class="page-footer__wrapper">
-        <div class="page-footer__hashtag">
+
+        <div class="footer__item hashtag">
           <b>#visitsedona</b>
         </div>
 
-        <div class="page-footer__social social">
+        <div class="footer__item social">
           <b class="social__title visually-hidden">Давайте дружить!</b>
-          <ul class="social__list">
-            <li class="social__item">
+          <div class="social__item">
               <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
                 <span class="visually-hidden">Мы в Твитере</span>
                 <svg width="18" height="15" viewBox="0 0 18 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M11.3 0.166728C13 -0.333272 14.4 0.366728 15 1.26673C15.7 1.06673 16.4 0.766728 17.1 0.566728C17.1 1.36673 16.6 2.06673 16.2 2.26673C16.9 2.46673 17.5 1.76673 17.5 1.76673C17.3 2.76673 16.5 3.46673 15.9 3.76673C15.7 10.3667 12.6 14.7667 5.5 14.5667C5 14.5667 5.6 14.5667 5 14.5667C4.6 14.5667 0.7 14.1667 0 12.7667C2.3 12.9667 4 12.3667 4.8 11.6667C3.8 11.3667 2 11.1667 1.7 8.76673C2.1 8.86673 2.3 8.96673 3 8.86673C1.8 8.06673 0.4 7.36673 0.5 5.16673C0.8 5.46673 1.6 5.66673 1.9 5.66673C1.2 5.46673 -0.1 2.36673 1 0.866728C2.9 2.66673 4.8 4.36673 8.4 4.56673C8.5 2.26673 9.5 0.766728 11.3 0.166728Z" fill="white"/>
                 </svg>
               </a>
-            </li>
-            <li class="social__item">
+            </div>
+            <div class="social__item">
               <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">
                 <span class="visually-hidden">Мы в Фейсбуке</span>
                 <svg width="9" height="19" viewBox="0 0 9 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M6.3 3.4C7.1 3.4 7.9 3.4 8.7 3.4C8.7 2.3 8.7 1.2 8.7 0C7.7 0 6.8 0 5.8 0C2.7 0.2 1.5 2.4 1.9 6.1H0V9.6H2C2 12.7 2 15.8 2 18.9C3.3 18.9 4.6 18.9 5.8 18.9C5.8 15.8 5.8 12.7 5.8 9.6H8.7V6.1H5.8C5.8 5.1 5.8 3.7 6.3 3.4Z" fill="white"/>
                 </svg>
               </a>
-            </li>
-            <li class="social__item">
+            </div>
+            <div class="social__item">
               <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">
                 <span class="visually-hidden">Мы в Ютуб</span>
                 <svg width="20" height="14" viewBox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M17.1 0H2.8C1.3 0 0 1.3 0 2.8V11.1C0 12.7 1.3 14 2.8 14H17.1C18.7 14 19.9 12.7 19.9 11.2V2.8C20 1.3 18.7 0 17.1 0ZM7 10.4V3.6L13.8 7L7 10.4Z" fill="white"/>
                 </svg>
               </a>
-            </li>
-          </ul>
+            </div>
         </div>
 
-        <div class="page-footer__copyright copyright">
+        <div class="footer__item  copyright">
           <b class="copyright__text">Разработано</b>
-          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">HTML Academy</span></a>
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+            <span class="visually-hidden">HTML Academy</span>
+            <svg width="27" height="35" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60">
+              <path fill="#000000" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/>
+            </svg>
+          </a>
         </div>
 
-      </div>
-    </footer>
+      </footer>
 
     <script>
       var navMain = document.querySelector('.main-nav');
@@ -207,5 +223,6 @@
         }
       });
     </script>
+  </div>
   </body>
 </html>
