Адаптивная графика для главной страницы

--- a/source/index.html
+++ b/source/index.html
@@ -128,7 +128,7 @@
 
       </section>
 
-      <section class="reasons">
+      <section class="reasons reasons_bop">
         <div class="reasons-item__wrapper">
           <div class="reasons-item__title">Небольшая площадь</div>
           <div class="reasons-item__desc">— №3 —</div>
